--- a/mainPage.ui
+++ b/mainPage.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>774</width>
-    <height>589</height>
+    <height>719</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -269,11 +269,6 @@
       <string>comulate</string>
      </property>
     </item>
-    <item>
-     <property name="text">
-      <string>Quantize</string>
-     </property>
-    </item>
    </widget>
    <widget class="Line" name="line">
     <property name="geometry">
@@ -356,8 +351,8 @@
    <widget class="QPushButton" name="opImportBtn">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>580</y>
+      <x>280</x>
+      <y>440</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -369,8 +364,8 @@
    <widget class="QPushButton" name="opDraw">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>580</y>
+      <x>360</x>
+      <y>440</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -383,7 +378,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>350</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -407,7 +402,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>430</y>
+      <y>380</y>
       <width>751</width>
       <height>41</height>
      </rect>
@@ -578,8 +573,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>470</y>
+      <x>-30</x>
+      <y>480</y>
       <width>871</width>
       <height>16</height>
      </rect>
@@ -588,19 +583,57 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QGroupBox" name="quantize_option">
+   <widget class="QDoubleSpinBox" name="quantize_field">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>330</y>
+      <x>40</x>
+      <y>550</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="decimals">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <double>1000000.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ampInpLabel_9">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>490</y>
+      <width>221</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Adobe Fan Heiti Std B</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Quantize</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="quantize_grp">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>540</y>
       <width>120</width>
       <height>61</height>
      </rect>
     </property>
     <property name="title">
-     <string>Type</string>
+     <string/>
     </property>
-    <widget class="QRadioButton" name="level">
+    <widget class="QRadioButton" name="isBit">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -610,13 +643,13 @@
       </rect>
      </property>
      <property name="text">
-      <string>Levels</string>
+      <string>Bits</string>
      </property>
      <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QRadioButton" name="bit">
+    <widget class="QRadioButton" name="isLevel">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -626,27 +659,34 @@
       </rect>
      </property>
      <property name="text">
-      <string>Bits</string>
+      <string>Levels</string>
      </property>
     </widget>
    </widget>
-   <widget class="QDoubleSpinBox" name="quant_text">
+   <widget class="QPushButton" name="quantizeBtn">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>340</y>
-      <width>171</width>
-      <height>41</height>
+      <x>370</x>
+      <y>560</y>
+      <width>75</width>
+      <height>23</height>
      </rect>
     </property>
-    <property name="decimals">
-     <number>0</number>
+    <property name="text">
+     <string>Quantize</string>
     </property>
-    <property name="minimum">
-     <double>0.000000000000000</double>
+   </widget>
+   <widget class="QPushButton" name="opImportBtn_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>630</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
     </property>
-    <property name="maximum">
-     <double>1000000.000000000000000</double>
+    <property name="text">
+     <string>Import</string>
     </property>
    </widget>
   </widget>
