--- a/lecs/mainPage.ui
+++ b/lecs/mainPage.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>841</width>
-    <height>952</height>
+    <width>780</width>
+    <height>1060</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -60,8 +60,8 @@
    <widget class="QDoubleSpinBox" name="anaInp">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>50</y>
+      <x>170</x>
+      <y>120</y>
       <width>161</width>
       <height>22</height>
      </rect>
@@ -76,8 +76,8 @@
    <widget class="QLabel" name="anaInpLabel">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>20</y>
+      <x>170</x>
+      <y>90</y>
       <width>141</width>
       <height>31</height>
      </rect>
@@ -134,8 +134,8 @@
    <widget class="QPushButton" name="drawBtn">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>100</y>
+      <x>360</x>
+      <y>160</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -147,8 +147,8 @@
    <widget class="QLabel" name="sampInpLabel">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>20</y>
+      <x>350</x>
+      <y>90</y>
       <width>161</width>
       <height>31</height>
      </rect>
@@ -168,8 +168,8 @@
    <widget class="QDoubleSpinBox" name="sampInp">
     <property name="geometry">
      <rect>
-      <x>700</x>
-      <y>50</y>
+      <x>350</x>
+      <y>120</y>
       <width>161</width>
       <height>22</height>
      </rect>
@@ -184,8 +184,8 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>40</y>
+      <x>530</x>
+      <y>50</y>
       <width>120</width>
       <height>61</height>
      </rect>
@@ -213,9 +213,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>37</y>
+       <y>40</y>
        <width>82</width>
-       <height>20</height>
+       <height>17</height>
       </rect>
      </property>
      <property name="text">
@@ -227,7 +227,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
+      <y>280</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -277,7 +277,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>130</y>
+      <y>180</y>
       <width>871</width>
       <height>16</height>
      </rect>
@@ -312,7 +312,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>150</y>
+      <y>200</y>
       <width>221</width>
       <height>31</height>
      </rect>
@@ -334,7 +334,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>250</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -355,7 +355,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>360</y>
+      <y>450</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -368,7 +368,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>360</y>
+      <y>450</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -381,7 +381,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>280</y>
+      <y>350</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -405,7 +405,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>310</y>
+      <y>380</y>
       <width>751</width>
       <height>41</height>
      </rect>
@@ -421,7 +421,7 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>180</y>
+      <y>230</y>
       <width>201</width>
       <height>91</height>
      </rect>
@@ -473,10 +473,10 @@
    <widget class="QPushButton" name="opClrBtn">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>310</y>
+      <x>690</x>
+      <y>350</y>
       <width>75</width>
-      <height>41</height>
+      <height>23</height>
      </rect>
     </property>
     <property name="text">
@@ -487,7 +487,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>180</y>
+      <y>230</y>
       <width>411</width>
       <height>91</height>
      </rect>
@@ -586,7 +586,7 @@
     <property name="geometry">
      <rect>
       <x>-10</x>
-      <y>390</y>
+      <y>480</y>
       <width>871</width>
       <height>16</height>
      </rect>
@@ -599,7 +599,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>510</y>
+      <y>600</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -612,7 +612,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>400</y>
+      <y>490</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -634,7 +634,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>450</y>
+      <y>540</y>
       <width>120</width>
       <height>61</height>
      </rect>
@@ -676,7 +676,7 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>520</y>
+      <y>610</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -692,7 +692,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>470</y>
+      <y>560</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -708,7 +708,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>440</y>
+      <y>530</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -729,7 +729,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>470</y>
+      <y>560</y>
       <width>91</width>
       <height>61</height>
      </rect>
@@ -739,7 +739,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>440</y>
+      <y>530</y>
       <width>41</width>
       <height>31</height>
      </rect>
@@ -762,8 +762,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>450</y>
+      <x>390</x>
+      <y>560</y>
       <width>371</width>
       <height>281</height>
      </rect>
@@ -786,11 +786,32 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="ampInpLabel_12">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>530</y>
+      <width>41</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>output</string>
+    </property>
+   </widget>
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
       <x>-30</x>
-      <y>740</y>
+      <y>850</y>
       <width>871</width>
       <height>16</height>
      </rect>
@@ -803,7 +824,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>750</y>
+      <y>860</y>
       <width>251</width>
       <height>31</height>
      </rect>
@@ -825,7 +846,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>780</y>
+      <y>890</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -846,7 +867,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>850</y>
+      <y>960</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -862,7 +883,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>810</y>
+      <y>920</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -877,8 +898,8 @@
    <widget class="QPushButton" name="forApplyBtn">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>810</y>
+      <x>150</x>
+      <y>990</y>
       <width>131</width>
       <height>23</height>
      </rect>
@@ -891,7 +912,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>810</y>
+      <y>920</y>
       <width>131</width>
       <height>61</height>
      </rect>
@@ -901,7 +922,7 @@
     <property name="geometry">
      <rect>
       <x>150</x>
-      <y>780</y>
+      <y>890</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -918,19 +939,71 @@
      <string>Sampling frequency</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="forSaveBtn">
+   <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>850</y>
-      <width>131</width>
-      <height>23</height>
+      <x>0</x>
+      <y>0</y>
+      <width>771</width>
+      <height>1021</height>
      </rect>
     </property>
-    <property name="text">
-     <string>Save wave in polar form</string>
+    <property name="widgetResizable">
+     <bool>true</bool>
     </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>769</width>
+       <height>1019</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
+   <zorder>scrollArea</zorder>
+   <zorder>ampInpLabel</zorder>
+   <zorder>ampInp</zorder>
+   <zorder>anaInp</zorder>
+   <zorder>anaInpLabel</zorder>
+   <zorder>phaseInpLabel</zorder>
+   <zorder>phaseInp</zorder>
+   <zorder>drawBtn</zorder>
+   <zorder>sampInpLabel</zorder>
+   <zorder>sampInp</zorder>
+   <zorder>groupBox</zorder>
+   <zorder>opComboBox</zorder>
+   <zorder>line</zorder>
+   <zorder>ampInpLabel_2</zorder>
+   <zorder>ampInpLabel_3</zorder>
+   <zorder>ampInpLabel_4</zorder>
+   <zorder>opImportBtn</zorder>
+   <zorder>opDraw</zorder>
+   <zorder>ampInpLabel_5</zorder>
+   <zorder>opFileNamesTxt</zorder>
+   <zorder>mulGroup</zorder>
+   <zorder>opClrBtn</zorder>
+   <zorder>normGroup</zorder>
+   <zorder>line_2</zorder>
+   <zorder>qntImportBtn</zorder>
+   <zorder>ampInpLabel_9</zorder>
+   <zorder>qntGroupBox</zorder>
+   <zorder>qntBtn</zorder>
+   <zorder>qntFileTxt</zorder>
+   <zorder>ampInpLabel_10</zorder>
+   <zorder>qntLvls</zorder>
+   <zorder>ampInpLabel_11</zorder>
+   <zorder>qntOutTxt</zorder>
+   <zorder>ampInpLabel_12</zorder>
+   <zorder>line_3</zorder>
+   <zorder>ampInpLabel_13</zorder>
+   <zorder>ampInpLabel_14</zorder>
+   <zorder>forImportBtn</zorder>
+   <zorder>forFileTxt</zorder>
+   <zorder>forApplyBtn</zorder>
+   <zorder>forSamplingInp</zorder>
+   <zorder>ampInpLabel_15</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menubar">
@@ -938,7 +1011,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>841</width>
+     <width>780</width>
      <height>21</height>
     </rect>
    </property>
@@ -949,7 +1022,6 @@
     <addaction name="txtDis"/>
     <addaction name="txtCon"/>
     <addaction name="txtDisCon"/>
-    <addaction name="actiontxt_polar"/>
    </widget>
    <widget class="QMenu" name="menutest">
     <property name="title">
@@ -984,11 +1056,6 @@
   <action name="quantizationBits">
    <property name="text">
     <string>quantization by bits</string>
-   </property>
-  </action>
-  <action name="actiontxt_polar">
-   <property name="text">
-    <string>txt polar</string>
    </property>
   </action>
  </widget>
